; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-interrupt.c___cvmx_interrupt_ciu_cn61xx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-interrupt.c___cvmx_interrupt_ciu_cn61xx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.__cvmx_interrupt_handler* }
%struct.__cvmx_interrupt_handler = type { i32, i32 (i32, i32*, i32)* }

@cvmx_interrupt_ciu_en1_mirror = common dso_local global i64 0, align 8
@cvmx_ciu_en1_to_irq = common dso_local global i32* null, align 8
@cvmx_interrupt_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i8*)* @__cvmx_interrupt_ciu_cn61xx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__cvmx_interrupt_ciu_cn61xx(i32 %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.__cvmx_interrupt_handler*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %13 = call i32 (...) @cvmx_get_core_num()
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = mul nsw i32 %14, 2
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @CVMX_CIU_SUM1_PPX_IP3(i32 %17)
  %19 = call i64 @cvmx_read_csr(i32 %18)
  %20 = load i64, i64* @cvmx_interrupt_ciu_en1_mirror, align 8
  %21 = and i64 %19, %20
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %11, align 4
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @CVMX_DCLZ(i32 %23, i32 %24)
  %26 = load i32, i32* %11, align 4
  %27 = sub nsw i32 63, %26
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %11, align 4
  %29 = icmp sge i32 %28, 0
  br i1 %29, label %30, label %66

30:                                               ; preds = %3
  %31 = load i32*, i32** @cvmx_ciu_en1_to_irq, align 8
  %32 = load i32, i32* %11, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %10, align 4
  %36 = load i32, i32* %10, align 4
  %37 = icmp eq i32 %36, 255
  %38 = zext i1 %37 to i32
  %39 = call i64 @cvmx_unlikely(i32 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %52

41:                                               ; preds = %30
  %42 = load i32, i32* %11, align 4
  %43 = zext i32 %42 to i64
  %44 = shl i64 1, %43
  %45 = xor i64 %44, -1
  %46 = load i64, i64* @cvmx_interrupt_ciu_en1_mirror, align 8
  %47 = and i64 %46, %45
  store i64 %47, i64* @cvmx_interrupt_ciu_en1_mirror, align 8
  %48 = load i32, i32* %8, align 4
  %49 = call i32 @CVMX_CIU_INTX_EN1(i32 %48)
  %50 = load i64, i64* @cvmx_interrupt_ciu_en1_mirror, align 8
  %51 = call i32 @cvmx_write_csr(i32 %49, i64 %50)
  br label %66

52:                                               ; preds = %30
  %53 = load %struct.__cvmx_interrupt_handler*, %struct.__cvmx_interrupt_handler** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cvmx_interrupt_state, i32 0, i32 0), align 8
  %54 = load i32, i32* %10, align 4
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds %struct.__cvmx_interrupt_handler, %struct.__cvmx_interrupt_handler* %53, i64 %55
  store %struct.__cvmx_interrupt_handler* %56, %struct.__cvmx_interrupt_handler** %12, align 8
  %57 = load %struct.__cvmx_interrupt_handler*, %struct.__cvmx_interrupt_handler** %12, align 8
  %58 = getelementptr inbounds %struct.__cvmx_interrupt_handler, %struct.__cvmx_interrupt_handler* %57, i32 0, i32 1
  %59 = load i32 (i32, i32*, i32)*, i32 (i32, i32*, i32)** %58, align 8
  %60 = load i32, i32* %10, align 4
  %61 = load i32*, i32** %5, align 8
  %62 = load %struct.__cvmx_interrupt_handler*, %struct.__cvmx_interrupt_handler** %12, align 8
  %63 = getelementptr inbounds %struct.__cvmx_interrupt_handler, %struct.__cvmx_interrupt_handler* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 8
  %65 = call i32 %59(i32 %60, i32* %61, i32 %64)
  br label %66

66:                                               ; preds = %41, %52, %3
  ret void
}

declare dso_local i32 @cvmx_get_core_num(...) #1

declare dso_local i64 @cvmx_read_csr(i32) #1

declare dso_local i32 @CVMX_CIU_SUM1_PPX_IP3(i32) #1

declare dso_local i32 @CVMX_DCLZ(i32, i32) #1

declare dso_local i64 @cvmx_unlikely(i32) #1

declare dso_local i32 @cvmx_write_csr(i32, i64) #1

declare dso_local i32 @CVMX_CIU_INTX_EN1(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
